--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,20 +1,16 @@
 :root {
-  --body-bg-color: linear-gradient(
-    109.6deg,
-    rgb(2, 155, 197) 11.3%,
-    rgb(5, 48, 221) 69.9%
-  );
-  --app-bg-color: rgba(255, 255, 255, 0.23);
-  --primary-color: rgb(32, 61, 179);
-  --text-color-primary: rgb(255, 255, 255);
-  --border-color: rgba(255, 255, 255, 0.3);
-  --principal-color: rgb(99, 213, 241);
-  --interest-color: rgb(167, 120, 243);
-  --error-color: rgb(185, 6, 66);
-  --error-bg-color: rgba(250, 176, 201, 0.7);
-  --input-bg-color: rgb(244, 245, 248, 0.2);
-  --input-bg-color-hover: rgb(244, 245, 248, 0.4);
-  --input-bg-color-focus: rgb(244, 245, 248, 0.6);
+  --body-bg-color: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  --app-bg-color: #fff;
+  --primary-color: #026bd4;
+  --text-color-primary: #3a4249;
+  --border-color: #eef0f5;
+  --principal-color: #026bd4;
+  --interest-color: #9a76ee;
+  --error-color: #b90642;
+  --error-bg-color: #f8c2d4b3;
+  --input-bg-color: #f1f5fd;
+  --input-bg-color-hover: #ebeffa;
+  --input-bg-color-focus: #e3eafc;
   --shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -49,7 +45,7 @@ select {
   border-radius: 5px;
   transition: 0.2s ease-in-out;
   background-color: var(--input-bg-color);
-  color: var(--primary-color);
+  color: inherit;
 }
 
 input:hover,
@@ -78,7 +74,7 @@ input[type="range"] {
   width: 200px;
   height: 4px;
   border-radius: 5px;
-  background: var(--border-color);
+  background: var(--input-bg-color);
   background-image: linear-gradient(var(--primary-color), var(--primary-color));
   background-repeat: no-repeat;
   transition: none;
